nixidy/generated/prod/komga/Service-komga.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: komga
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: komga
    app.kubernetes.io/service: komga
  name: komga
  namespace: media
spec:
  ports:
    - name: http
      port: 25600
      protocol: TCP
      targetPort: 25600
  selector:
    app.kubernetes.io/controller: komga
    app.kubernetes.io/instance: komga
    app.kubernetes.io/name: komga
  type: ClusterIP
